--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: 
+  content: MyString
   user_id: 1
 
 two:
-  content: 
+  content: MyString
   user_id: 1
